--- a/Media.html
+++ b/Media.html
@@ -26,7 +26,7 @@
           <li><a href="Equipping.html">Equipping</a></li>
           <li><a href="Media.html">Media</a></li>
           <li><a href="Announcement.html">Announcement</a></li>
-          <li><a href="#">Prayer Request </a></li>
+          <li><a href="PrayerRequest.html">Prayer Request </a></li>
         </ul>
       </div>
     </nav>
