--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
   <!-- if i cant get close to you -->
-  <!-- aaaaaaaaaaaaaaaaaaaa -->
+  <!-- aaaaaaaaaaaaaaaaaaaa -->  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Index.css">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Condensed:ital,wght@0,400;1,300&display=swap');
+    </style>
     <script src="Index.js" defer></script>
     <title> Index </title>
     
