--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- if i cant get close to you -->
-  <!-- aaaaaaaaaaaaaaaaaaaa -->  
+  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +22,7 @@
                 <nav>
                     <ul id="menuList">
                         <li><a href="">Home</a></li>
-                        <li><a href="">Connects</a></li>
+                        <li><a href="#connects">Connects</a></li>
                         <li><a href="#equipping">Equipping</a></li>
                         <li><a href="">Media</a></li>
                         <li><a href="">Announcement</a></li>
@@ -66,7 +65,7 @@
     <div class="connects">
     
     <div class="twoPrograms">
-        <a href="">
+        <a href="Sundayservice.html">
         <div class="sundayServices zoom">
           <img src="ConnectsIMGs/sundaySchool.png" alt="">
         </div>
@@ -147,7 +146,6 @@
                 <p>Join us and learn how to live the life of a Christian</p>
               </a>
             </div>
-          
           </div>
         </div>
       </div>
