--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                         <li><a href="">Home</a></li>
                         <li><a href="#connects">Connects</a></li>
                         <li><a href="#equipping">Equipping</a></li>
-                        <li><a href="">Media</a></li>
-                        <li><a href="">Announcement</a></li>
-                        <li><a href="">Prayer Request </a></li>
+                        <li><a href="#media">Media</a></li>
+                        <li><a href="Announcement.html">Announcement</a></li>
+                        <li><a href="#prayerRequest">Prayer Request </a></li>
                     </ul>
                 </nav>
                 <img src="HeadnFooter/menu.png" class="menuIcon" onclick="openMenu()">
@@ -151,7 +151,8 @@
       </div>
     </section>
 
-
+  <div class="starPlatrinum">
+    <section id="media">
       <div class="media">
         <div class="mediaImg">
           <img src="MediaIMGs/bidaBida.jpg">
@@ -166,9 +167,9 @@
           </div>
         </div>
       </div>
+    </section>
 
-      <div></div>
-
+    <section id="prayerRequest">
       <div class="form">
         <h1>Submit a Prayer Request</h1>
         <p>Prayer is an important way to experience God as the religious believer can communicate with Him. By bringing their problems to God, or asking for forgiveness and help, they come closer to Him. Christians believe they can speak with God in prayer and were taught to pray by Jesus himself.</p>
@@ -185,17 +186,23 @@
           <button>Submit</button>
         </form>
       </div>
+    </section>
 
-      <div class="announce">
+    <section id="announce">
+      <div class="announce1">
         <div class="announcement">
           <h1>What's New?</h1>
           <p>Check us here for any new updates and news about our church!</p>
-          <button>Check us out</button>
+          <div class="btn">
+            <button>Check us out</button>
+          </div>
         </div>
         <div class="announceImg">
           <img src="HomeImgs/goalsImg.jpg" alt="">
         </div>
       </div>
+    </section>
+  </div>
 
       <footer>
         <div class="flinks">
