--- a/Announcement.html
+++ b/Announcement.html
@@ -17,7 +17,9 @@
     <div class="webTop">
         <div class="navbar">
             <div class="links">
+              <a href="index.html">
                 <img src="HeadnFooter/logo.png" class="logoIcon">
+              </a>
                 <nav>
                     <ul id="menuList">
                         <li><a href="index.html">Home</a></li>
@@ -30,54 +32,66 @@
     </div>
 
     <div class="report">
-      <img src="AnnounceIMGs/MPannounce.jpg" alt="">
-      <div class="textOne">
-        <p id="noice">Morning Prayer Line</p>
-        <h5>November 29, 2022</h5>
-        <h1>Morning Prayer Line</h1>
-      </div>
+      <img src="AnnounceIMGs/Banner.png" alt="">
     </div>
 
-    <div class="report1">
-
-      <div class="column1">
+    <div class="newsSection">
+      <div class="row1">
         <div class="news1">
           <img src="AnnounceIMGs/MPgoodnews.jpg" alt="">
-          <div class="newsText1">
-            <p id="noice">Good News</p>
-            <h5>November 28, 2022</h5>
+          <div class="textArea1">
+            <p>Good News</p>
             <h1>Patience</h1>
+            <h5>Novermber 28, 2022</h5>
           </div>
         </div>
         <div class="news2">
-          <img src="AnnounceIMGs/MPgoodnews1.jpg" alt="">
-          <div class="newsText2">
-            <p id="noice">Good News</p>
-            <h5>November 28, 2022</h5>
-            <h1>The Lord is our Guide</h1>
+          <img src="AnnounceIMGs/MPgoodnews4.jpg" alt="">
+          <div class="textArea2">
+            <p>Morning Prayer Line</p>
+            <h1>With Ps. Alex</h1>
+            <h5>Novermber 26, 2022</h5>
+          </div>
+        </div>
+        <div class="news3">
+          <img src="AnnounceIMGs/MPgoodnews2.jpg" alt="">
+          <div class="textArea3">
+            <p>Good News</p>
+            <h1>Holy Spirit</h1>
+            <h5>Novermber 24, 2022</h5>
           </div>
         </div>
       </div>
 
-     <div class="column2">
-        <div class="news3">
-          <img src="AnnounceIMGs/MPgoodnews2.jpg" alt="">
-          <div class="newsText3">
-            <p id="noice">Good News</p>
-            <h5>November 28, 2022</h5>
-            <h1>The importance of Holy Spirit</h1>
-          </div>
-        </div>
+      <div class="row2">
         <div class="news4">
           <img src="AnnounceIMGs/MPgoodnews3.jpg" alt="">
-          <div class="newsText4">
-            <p id="noice">Good News</p>
-            <h5>November 28, 2022</h5>
-            <h1>Obeying God</h1>
+          <div class="textArea4">
+            <p>Meeting</p>
+            <h1>Cell Leaders Meeting</h1>
+            <h5>Novermber 22, 2022</h5>
           </div>
         </div>
-      </div>  
+       <div class="news5">
+          <img src="AnnounceIMGs/J12Kids.jpg" alt="">
+          <div class="textArea5">
+            <p>J12 Kids</p>
+            <h1>Come and learn!</h1>
+            <h5>Novermber 19, 2022</h5>
+          </div>
+        </div>
+       <div class="news6">
+          <img src="AnnounceIMGs/MPgoodnews5.jpg" alt="">
+          <div class="textArea6">
+            <p>Good News</p>
+            <h1>Surrender our life</h1>
+            <h5>Novermber 17, 2022</h5>
+          </div>
+        </div> 
+      </div>
     </div>
+
+
 
     
 
