--- a/index.html
+++ b/index.html
@@ -204,44 +204,35 @@
     </section>
   </div>
 
-      <footer>
-        <div class="flinks">
+    <footer>
+        <div class="flinksBG">
+          <div class="topLinks">
+            <div class="flinks">
+              <ul>
+                <a href=""><li><h1>JGLWHM</h1></li></a>
+                <a href=""><li><h5>CONNECTS</h5></li></a>
+                <a href=""><li><h5>EQUIPPING</h5></li></a>
+                <a href=""><li><h5>MEDIA</h5></li></a>
+                <a href=""><li><h5>ANNOUNCEMENT</h5></li></a>
+                <a href=""><li><h5>PRAYER REQUEST</h5></li></a>
+              </ul>
+            </div>
 
-          <div class="findex">
-            <a href="Home.html">JGLWHM</a>
-            <a href="#"><p>Contact Us</p></a>
+            <div class="pictures">
+              <a href="https://www.facebook.com/greatlightworldharvest"><img src="HeadnFooter/fblogo.png" alt="" class="fb"></a>
+              <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413/videos"><img src="HeadnFooter/ytlogo.png" alt="" class="yt"></a>
+            </div>
           </div>
 
-          <div class="fconnects">
-            <a href="Connects.html">Connects</a>
-            <a href="#"><p>Sunday Services</p></a>
-            <a href="#"><p>Wildfire</p></a>
-            <a href="#"><p>J12 Kids</p></a>
-            <a href="#"><p>Married for Life</p></a>
-            <a href="#"><p>Spearhead</p></a>
+          <div class="bottomLinks">
+            <div class="location">
+              <a href="https://www.google.com/maps/place/Jesus+the+Great+Light+World+Harvest+Ministry/@14.2716321,120.873305,15z/data=!4m5!3m4!1s0x0:0x74ed2f5b7a9981a3!8m2!3d14.2716498!4d120.8733005"><h5>Address : 002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</h5></a>
+            </div>
+            <div class="email">
+              <h5>Email : @jesusthegreatlight@gmail.com</h5>
+            </div>
           </div>
-
-          <div class="fequipping">
-            <a href="Equipping.html">Equipping</a>
-            <a href="#"><p>Life Class</p></a>
-            <a href="#"><p>Mentoring</p></a>
-            <a href="#"><p>SOL</p></a>
-          </div>
-
-          <div class="fmedia">
-            <a href="Media.html">Media</a>
-            <a href=""><p>Photos</p></a>
-            <a href=""><p>Videos</p></a>
-          </div>
-
-          <div class="fannounce">
-            <a href="Announcement.html">Announcement</a>
-          </div>
-
-          <div class="fpr">
-            <a href="#">Prayer Request</a>
-          </div>
-        </div>
+        </div> 
     </footer>
 
 
