--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <img src="ConnectsIMGs/sundaySchool.png" alt="">
         </div>
         </a>
-        <a href="">
+        <a href="J12Kids.html">
         <div class="jkids">
           <img src="ConnectsIMGs/J12Kids.jpg" alt="">
         </div>
