J12 Kids patch notes
Bruh

--- a/J12Kids.html
+++ b/J12Kids.html
@@ -53,35 +53,112 @@
         </div>
     </div>
 
-    <!-- <div class="teachers">
+    <div class="teachers hidden1">
         <div class = "meet">
             <h1>Meet our Teachers!</h1>
         </div>
         <div class="advisers">
             <div class="rowOne">
-                <div class="itemOne">
+                <div class="itemOne hidden1">
                     <img src="J12KidsIMGs/sampleProfile.webp" alt="">
                     <div class="itemOnetext">
                         <p>Teacher Spike</p>
                     </div>
                 </div>
-                <div class="itemTwo">
+                <div class="itemTwo hidden1">
                     <img src="J12KidsIMGs/sampleProfile.webp" alt="">
                     <div class="itemTwotext">
                         <p>Teacher Spike</p>
                     </div>
                 </div>
-                <div class="itemThree">
+                <div class="itemThree hidden1">
                     <img src="J12KidsIMGs/sampleProfile.webp" alt="">
-                    <div class="rowTwotext">
+                    <div class="itemThreetext">
+                        <p>Teacher Spike</p>
+                    </div>
+                </div>
+                <div class="itemFour hidden1">
+                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                    <div class="itemFourtext">
                         <p>Teacher Spike</p>
                     </div>
                 </div>
             </div>
             <div class="rowTwo">
-
+                <div class="itemOne hidden1">
+                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                    <div class="itemOnetext">
+                        <p>Teacher Spike</p>
+                    </div>
+                </div>
+                <div class="itemTwo hidden1">
+                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                    <div class="itemTwotext">
+                        <p>Teacher Spike</p>
+                    </div>
+                </div>
+                <div class="itemThree hidden1">
+                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                    <div class="itemThreetext">
+                        <p>Teacher Spike</p>
+                    </div>
+                </div>
             </div>
         </div>  
-    </div> -->
+    </div>
+
+    <div class="shortIntroduction">
+        <h1>Bible Children Stories!</h1>
+        <p>The bible has a lot of stories that are great and beautiful but the most important thing are these stories helps us to get to know what God is like, what we are like and the way God wants us to live. </p>
+    </div>
+
+    <div class="studiesSection">
+        <div class="oneRow">
+            <div class="gnews1">
+                <img src="J12KidsIMGs/kidsandjesus.jpg" alt="">
+                <div class="textArea1">
+                  <p>Story</p>
+                  <h1>Why Jesus loves Children?</h1>
+                </div>
+            </div>
+            <div class="gnews2">
+                <img src="J12KidsIMGs/davidandgoliath.jpg" alt="">
+                <div class="textArea2">
+                  <p>Story</p>
+                  <h1>Story of David and Goliath</h1>
+                </div>
+            </div>
+            <div class="gnews3">
+                <img src="J12KidsIMGs/danielandtheLion.jpg" alt="">
+                <div class="textArea3">
+                  <p>Story</p>
+                  <h1>Daniel and the Lion</h1>
+                </div>
+            </div>
+        </div>
+        <div class="twoRow">
+            <div class="gnews4">
+                <img src="J12KidsIMGs/creation.jpg" alt="">
+                <div class="textArea4">
+                  <p>Story</p>
+                  <h1>Story of Creation</h1>
+                </div>
+            </div>
+            <div class="gnews5">
+                <img src="J12KidsIMGs/jesusfeeds5000.jpeg" alt="">
+                <div class="textArea5">
+                  <p>Story</p>
+                  <h1>Jesus feeds 5000 People</h1>
+                </div>
+            </div>
+            <div class="gnews6">
+                <img src="J12KidsIMGs/lazarus.jpg" alt="">
+                <div class="textArea6">
+                  <p>Story</p>
+                  <h1>Lazarus</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
