--- a/index.html
+++ b/index.html
@@ -162,8 +162,7 @@
           <p>Photographs play an important role in everyone's life - they connect us to our past, they remind us of people, places, feelings, and stories. They can help us to know who we are.</p>
           <p id = "noice">Our church have our moments and memories and we like to share it to everyone and the good thing about it is you can be a part of it too!!</p>
           <div>
-            <button id="images">Images</button>
-            <button id="videos">Videos</button>
+            <button id="images">Album</button>
           </div>
         </div>
       </div>
