--- a/J12Kids.html
+++ b/J12Kids.html
@@ -160,5 +160,43 @@
             </div>
         </div>
     </div>
+
+    <div class="announce1">
+        <div class="announcement">
+          <h1>What's New?</h1>
+          <p>Check us here for any new updates and news about J12 Kids!</p>
+          <a href="Announcement.html">
+          <div class="btn">
+            <button>Check us out</button>
+          </div>
+            </a>
+        </div>
+        <div class="announceImg">
+          <img src="HomeImgs/goalsImg.jpg" alt="">
+        </div>
+      </div>
+
+    <div class="bgbackground">
+        <div class="bottomLinks">
+          <div class="demnSon">
+              <h1>JGLWHM</h1>
+              <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
+              <p>@jesusthegreatlight@gmail.com</p>
+              <p>facebook.com/greatlightworldharvest</p>
+          </div>
+          <div class="bottomForm">
+              <h1>Notification Form</h1>
+              <p>Be notified if there are any new news about J12 Kids!</p>
+              <form action="bottomForm">
+                  <label for="">Name:</label><br>
+                  <input type="text"><br>
+                  <label for="">Email</label><br>
+                  <input type="text"><br>
+                  <label for="">Contact No.</label><br>
+                  <input type="text">
+              </form>
+          </div>
+        </div>
+      </div>
 </body>
 </html>
