--- a/Spearhead.html
+++ b/Spearhead.html
@@ -20,8 +20,86 @@
         </div>
         <div class="webName hidden1">
             <h1>Spearhead</h1>
-            <h2 class = "hidden1">at Colegio de Amore</h2>
+            <h2 class = "hidden1"> 2nd and last Fridays, 7:00 pm</h2>
         </div>
+    </div>
+
+    <div class="spearheadInfo">
+        <div class="introInfo hidden1">
+            <h1>What is Spearhead?</h1>
+            <p>is a community of working singles who are commited to sharing the gospel of Jesus</p>
+            <p id="info2">We help our adults and young adults to be hardworking in life to reach their dreams but also help them understand and align their faith to our Lord.</p>
+        </div>
+        <div class="introImg hidden1">
+            <img src="SpearheadIMGs/spearhead.jpg" alt="">
+        </div>
+    </div>
+.
+    <div class="webContent hidden">
+        <div class="intro">
+            <h1>What do we do in Spearhead?</h1>
+        </div>
+        <div class="spearheadActivities">
+            <div class="testimony hidden">
+                <img src="SpearheadIMGs/purposeImg.jpg" alt="">
+                <div class="testimonyInfo">
+                    <h1>Share Testimony</h1>
+                    <p>Sharing your testimony is equal to showing our God's mercy and miracles that happened in your life</p>
+                </div>
+            </div>
+            <div class="lifea hidden">
+                <img src="HomeIMGs/visionImg.jpg" alt="">
+                <div class="lifeaInfo">
+                    <h1>Life Advices</h1>
+                    <p>Help each other member by giving life advices to each other!</p>
+                </div>
+            </div>
+            <div class="fellow hidden">
+                <img src="SpearheadIMGs/fellow.jpg" alt="">
+                <div class="fellowInfo">
+                    <h1>Fellowship</h1>
+                    <p>Have a break from your work and have fun with our members in Christ!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="announce1">
+        <div class="announcement">
+          <h1>What's New?</h1>
+          <p>Check us here for any new updates and news about Spearhead!</p>
+          <a href="Announcement.html">
+          <div class="btn">
+            <button>Check us out</button>
+          </div>
+            </a>
+        </div>
+        <div class="announceImg">
+          <img src="HomeImgs/goalsImg.jpg" alt="">
+        </div>
+      </div>
+
+    <div class="bgbackground">
+      <div class="bottomLinks">
+        <div class="demnSon">
+            <h1>JGLWHM</h1>
+            <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
+            <p>@jesusthegreatlight@gmail.com</p>
+            <p>facebook.com/greatlightworldharvest</p>
+        </div>
+        <div class="bottomForm">
+            <h1>Notification Form</h1>
+            <p>Be notified if there are any new news about Spearhead!</p>
+            <form action="bottomForm">
+                <label for="">Name:</label><br>
+                <input type="text"><br>
+                <label for="">Email</label><br>
+                <input type="text"><br>
+                <label for="">Contact No.</label><br>
+                <input type="text">
+            </form>
+        </div>
+      </div>
     </div>
 
 </body>
