--- a/index.html
+++ b/index.html
@@ -222,15 +222,10 @@
                   <input type="text"><br>
                   <label for="">Contact No.</label><br>
                   <input type="text">
+                  <button>Submit</button>
               </form>
           </div>
         </div>
       </div>
-
-
-</body>
-
-
-
-
+  </body>
 </html>
