--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <div class="demnSon">
               <h1>JGLWHM</h1>
               <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
-              <p>@jesusthegreatlight@gmail.com</p>
+              <a href="">@jesusthegreatlight@gmail.com</a>
               <p>facebook.com/greatlightworldharvest</p>
           </div>
           <div class="bottomForm">
