--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -12,52 +12,37 @@
     <title>Sunday Service</title>
 </head>
 <body>
-   <div class="bgweb">
-    <div class="topbar">
-        <a href="index.html">
-            <h1>JGLWHM</h1>
-        </a>
+
+    <div class="bgweb">
+        <div class="topbar">
+            <a href="index.html">
+                <img src="HeadnFooter/logo.png" alt="">
+            </a>
+        </div>
+
+        <div class="videoSection">
+            <video controls>
+                <source src="SundaySchooltings/SampleVid.mkv" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+            <h1>Latest Stream</h1>
+            <p>Date: January XX, 2023</p>
+        </div>
     </div>
 
-    <div class="webContent">
-        <section class="hidden">
-        <div class="video">
-            <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fgreatlightworldharvest%2Fvideos%2F1127352864465511%2F&show_text=false&width=560&t=0&playsinline=0" width="560" height="214" allowfullscreen="0" style="border:none;overflow:hidden" scrolling="no" frameborder="0"  allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" ></iframe>
+    <div class="sundayserviceIntro">
+        <div class="introText">
+            <h2>Welcome to our</h2>
+            <h1>Sunday Service!</h1>
         </div>
-        </section>
-        <section class="hidden">
-        <div class="text">
-            <h1>Sunday School</h1>
-            <h2>The obvious answer is to teach about the story of Jesus Christ to others on Sunday mornings before the beginning of church service. This is a routine that is followed within many different churches.</h2>
-        </div>
-        </section>
-    </div>
-   </div>
-<section class="hidden">
-   <div class="sundayService">
-        <div class="picture">
-            <img src="SundaySchooltings/worship.jpg" alt="">
-        </div>
-        <div class="text">
-            <h1>What is a Sunday Service?</h1>
-            <p>a formalized period of Christian communal worship, often held in a church building. It often but not exclusively occurs on Sunday, or Saturday in the case of those churches practicing seventh-day Sabbatarianism.</p>
+        <div class="monthsText">
+            <h2>Our month's theme are</h2>
+            <h1>Pressing Ahead</h1>
+            <img src="SundaySchooltings/pressingAhead.jpg" alt="">
         </div>
     </div>
-</section>
-<section class="hidden">
-    <div class="wiss">
-        <div class="noice">
-            <h1>Importance of Sunday Service</h1>
-            <p>Attending church is part of the life of a true follower of Christ. So, it is therefore discouraged that you plan other non-church related activities that will be in conflict with Sunday services and other church-related programs. The reasons why you should always attend church are some of the following like It is a way of showing our love for God, It builds us up spiritually, It strengthens relationship with fellow Christians, It is a way of showing our obedience to God and many more. </p>
-        </div>
-        <div class="wissImg">
-            <img src="SundaySchooltings/importance.jpg" alt="">
-        </div>
-    </div>
-</section>
 
-<section id="web2">
-    <section class="hidden">
+
     <div class="pastStudies">
             <h1>Archives</h1>
             <p>This section stores all of the past sermon and studies on our past sunday service</p>
@@ -109,27 +94,47 @@
             </div>
         </div>
     </div>
-</section>
-</section>
-<section class="formSection">
-    <div class="form">
-        <div class="text">
-            <h1>Be notified!</h1>
-            <p>If you want to be updated about our Sunday Services and it's Livestream then please kindly fill up the form!</p>
+
+    <div class="announce1">
+        <div class="announcement">
+          <h1>What's New?</h1>
+          <p>Check us here for any new updates and news about our Sunday Services!</p>
+          <a href="Announcement.html">
+          <div class="btn">
+            <button>Check us out</button>
+          </div>
+            </a>
         </div>
-        <div class="notif">
-            <form action="">
-                <label>Name:</label>
-                <input type="text">
-                <label>Contact No.:</label>
-                <input type="text">
-                <label>Email:</label>
-                <input type="text"><br>
-                <button>Submit</button>
-            </form>
+        <div class="announceImg">
+          <img src="HomeImgs/goalsImg.jpg" alt="">
         </div>
+      </div>
+
+<div class="bgbackground">
+    <div class="bottomLinks">
+      <div class="demnSon">
+          <h1>JGLWHM</h1>
+          <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
+          <a href="">@jesusthegreatlight@gmail.com</a>
+          <p>facebook.com/greatlightworldharvest</p>
+      </div>
+      <div class="bottomForm">
+          <h1>Notification Form</h1>
+          <p>Be notified if there are any new news about our Sunday Church!</p>
+          <form>
+              <label for="">Name:</label><br>
+              <input type="text"><br>
+              <label for="">Email</label><br>
+              <input type="text"><br>
+              <label for="">Contact No.</label><br>
+              <input type="text">
+              <button>Submit</button>
+          </form>
+      </div>
     </div>
-</section>
+  </div>
+
+
 
 </body>
 </html>
