--- a/Announcement.html
+++ b/Announcement.html
@@ -91,6 +91,31 @@
       </div>
     </div>
 
+    <div class="bgbackground">
+      <div class="bottomLinks">
+        <div class="demnSon">
+            <h1>JGLWHM</h1>
+            <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
+            <p>@jesusthegreatlight@gmail.com</p>
+            <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
+            <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
+        </div>
+        <div class="bottomForm">
+            <h1>Notification Form</h1>
+            <p>Be notified if there are any new news about our church!</p>
+            <form>
+                <label for="">Name:</label><br>
+                <input type="text"><br>
+                <label for="">Email</label><br>
+                <input type="text"><br>
+                <label for="">Contact No.</label><br>
+                <input type="text">
+                <button>Submit</button>
+            </form>
+        </div>
+      </div>
+    </div>
+
 
 
     
