--- a/J12Kids.html
+++ b/J12Kids.html
@@ -103,6 +103,12 @@
                         <p>Teacher Spike</p>
                     </div>
                 </div>
+                <div class="itemFour hidden1">
+                    <img src="J12KidsIMGs/sampleProfile.webp" alt="">
+                    <div class="itemFourtext">
+                        <p>Teacher Spike</p>
+                    </div>
+                </div>
             </div>
         </div>  
     </div>
