--- a/Spearhead.html
+++ b/Spearhead.html
@@ -97,6 +97,7 @@
                 <input type="text"><br>
                 <label for="">Contact No.</label><br>
                 <input type="text">
+                <button>Submit</button>
             </form>
         </div>
       </div>
