--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -22,7 +22,7 @@
 
         <div class="videoSection">
             <video controls>
-                <source src="SundaySchooltings/SampleVid.mkv" type="video/mp4">
+                <source src="SundaySchooltings/SampleVid.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <h1>Latest Stream</h1>
@@ -36,8 +36,8 @@
             <h1>Sunday Service!</h1>
         </div>
         <div class="monthsText">
-            <h2>Our month's theme are</h2>
-            <h1>Pressing Ahead</h1>
+            <h2>This year's theme are</h2>
+            <h1>"Pressing Ahead"</h1>
             <img src="SundaySchooltings/pressingAhead.jpg" alt="">
         </div>
     </div>
