--- a/index.html
+++ b/index.html
@@ -209,8 +209,9 @@
           <div class="demnSon">
               <h1>JGLWHM</h1>
               <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
-              <a href="">@jesusthegreatlight@gmail.com</a>
-              <p>facebook.com/greatlightworldharvest</p>
+              <p>@jesusthegreatlight@gmail.com</p>
+              <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
+              <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
           </div>
           <div class="bottomForm">
               <h1>Notification Form</h1>
