--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           </div>
         </div>
         <div class="announceImg">
-          <img src="HomeImgs/goalsImg.jpg" alt="">
+          <img src="HomeIMGs/goalsImg.jpg" alt="">
         </div>
       </div>
     </section>
