--- a/index.html
+++ b/index.html
@@ -168,26 +168,12 @@
       </div>
     </section>
 
-    <section id="prayerRequest">
       <div class="form">
         <h1>Submit a Prayer Request</h1>
         <p>Prayer is an important way to experience God as the religious believer can communicate with Him. By bringing their problems to God, or asking for forgiveness and help, they come closer to Him. Christians believe they can speak with God in prayer and were taught to pray by Jesus himself.</p>
-        <h1 id="sform">Prayer Request Form</h1>
-        <form>
-          <label>First name:</label><br>
-          <input type="text"><br>
-          <label>Last name:</label><br>
-          <input type="text"><br>
-          <label>Email</label><br>
-          <input type="text"><br>
-          <label>Prayer Request</label><br>
-          <textarea id="message"></textarea><br>
-          <button>Submit</button>
-        </form>
+        <button>Prayer Request</button>
       </div>
-    </section>
 
-    <section id="announce">
       <div class="announce1">
         <div class="announcement">
           <h1>What's New?</h1>
@@ -200,10 +186,7 @@
           <img src="HomeIMGs/goalsImg.jpg" alt="">
         </div>
       </div>
-    </section>
-  </div>
 
-    
       <div class="bgbackground">
         <div class="bottomLinks">
           <div class="demnSon">
@@ -213,7 +196,7 @@
               <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
               <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
           </div>
-          <div class="bottomForm">
+          <!-- <div class="bottomForm">
               <h1>Notification Form</h1>
               <p>Be notified if there are any new news about our church!</p>
               <form>
@@ -225,7 +208,7 @@
                   <input type="text">
                   <button>Submit</button>
               </form>
-          </div>
+          </div> -->
         </div>
       </div>
   </body>
