--- a/Spearhead.html
+++ b/Spearhead.html
@@ -84,10 +84,10 @@
         <div class="demnSon">
             <h1>JGLWHM</h1>
             <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
-            <p>@jesusthegreatlight@gmail.com</p>
-            <p>facebook.com/greatlightworldharvest</p>
+            <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
+            <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
         </div>
-        <div class="bottomForm">
+        <!-- <div class="bottomForm">
             <h1>Notification Form</h1>
             <p>Be notified if there are any new news about Spearhead!</p>
             <form action="bottomForm">
@@ -99,7 +99,7 @@
                 <input type="text">
                 <button>Submit</button>
             </form>
-        </div>
+        </div> -->
       </div>
     </div>
 
