--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="#equipping">Equipping</a></li>
                         <li><a href="#media">Media</a></li>
                         <li><a href="Announcement.html">Announcement</a></li>
-                        <li><a href="#prayerRequest">Prayer Request </a></li>
+                        <li><a href="PrayerRequest.html">Prayer Request </a></li>
                     </ul>
                 </nav>
                 <img src="HeadnFooter/menu.png" class="menuIcon" onclick="openMenu()">
@@ -171,7 +171,7 @@
       <div class="form">
         <h1>Submit a Prayer Request</h1>
         <p>Prayer is an important way to experience God as the religious believer can communicate with Him. By bringing their problems to God, or asking for forgiveness and help, they come closer to Him. Christians believe they can speak with God in prayer and were taught to pray by Jesus himself.</p>
-        <button>Prayer Request</button>
+        <a href="PrayerRequest.html"><button>Prayer Request</button></a>
       </div>
 
       <div class="announce1">
