--- a/Announcement.html
+++ b/Announcement.html
@@ -100,7 +100,7 @@
             <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
             <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
         </div>
-        <div class="bottomForm">
+        <!-- <div class="bottomForm">
             <h1>Notification Form</h1>
             <p>Be notified if there are any new news about our church!</p>
             <form>
@@ -112,7 +112,7 @@
                 <input type="text">
                 <button>Submit</button>
             </form>
-        </div>
+        </div> -->
       </div>
     </div>
 
