--- a/J12Kids.html
+++ b/J12Kids.html
@@ -187,10 +187,10 @@
           <div class="demnSon">
               <h1>JGLWHM</h1>
               <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
-              <p>@jesusthegreatlight@gmail.com</p>
-              <p>facebook.com/greatlightworldharvest</p>
+              <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
+              <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
           </div>
-          <div class="bottomForm">
+          <!-- <div class="bottomForm">
               <h1>Notification Form</h1>
               <p>Be notified if there are any new news about J12 Kids!</p>
               <form action="bottomForm">
@@ -200,8 +200,8 @@
                   <input type="text"><br>
                   <label for="">Contact No.</label><br>
                   <input type="text">
-              </form>
-          </div>
+              </form> -->
+          </div> -->
         </div>
       </div>
 </body>
