--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         </div>
 
     <div class="mgp">
-<<<<<<< HEAD
         <div class="vision">
             <h1 class="yas">Vision</h1>
             <p>To win souls and make disciples, Soul winning is preaching the word of God, giving someone an opportunity to give their lives to Christ and save them from going to hell. Through this, the person can become a child of God, enjoy His goodness and inheritance, even while on earth.</p>
@@ -52,20 +51,6 @@
             <h1 class="yas">Goals</h1>
             <p>To make every believer a leader of leaders, As Christians, we carry the responsibility of representing Christ in the way we lead. It's not just for our sake but the sake of those around us.</p>
         </div>
-=======
-      <div class="vision">
-        <h1 class="h1">Vision</h1>
-          <p>To win souls and make disciples, Soul winning is preaching the word of God, giving someone an opportunity to give their lives to Christ and save them from going to hell. Through this, the person can become a child of God, enjoy His goodness and inheritance, even while on earth.</p>
-      </div>
-      <div class="purpose">
-          <h1 class="h1">Purpose</h1>
-          <p>To love God and to love people,  It's an undivided love. God is our priority. If we love God with all our hearts, souls, minds, and strength, then we won't allow other things to crowd in. </p>
-      </div>
-      <div class="goal">
-          <h1 class="h1">Goals</h1>
-          <p>To make every believer a leader of leaders, As Christians, we carry the responsibility of representing Christ in the way we lead. It's not just for our sake but the sake of those around us.</p>
-      </div>
->>>>>>> dca2361d10f86fd2942c45bccc98515532f46bfc
     </div>
     </div>
 
@@ -115,11 +100,6 @@
     <section id="equipping">
     <div class="upperPos">
 
-<<<<<<< HEAD
-
-
-=======
->>>>>>> dca2361d10f86fd2942c45bccc98515532f46bfc
         <div class="text">
 
           <div class="description">
@@ -130,7 +110,7 @@
         
           <div class="choices">
             <div class="mentoring zoom">
-              <a href="">
+              <a href="Mentoring.html">
                 <img src="EquippingIMGs/mentor.png" alt="">
                 <p id="nice">Mentoring</p>
                 <p>Be mentored and be a worker of God</p>
