--- a/Mentoring.html
+++ b/Mentoring.html
@@ -18,8 +18,10 @@
                 <img src="HeadnFooter/logo.png" alt="">
             </a>
         </div>
-        <div class="webName hidden1">
+        <div class="webName">
             <h1>Mentoring</h1>
+            <p>Be shepherds of God's flock that is under your care, watching over them—not because you must, but because you are willing, as God wants you to be; not pursuing dishonest gain, but eager to serve; not lording it over those entrusted to you, but being examples to the flock.                                     </p>
+            <p id="verse">1 Peter 5:2-3</p>
         </div>
     </div>
 
@@ -33,6 +35,7 @@
         </div>
     </div>
 
+<div id="bgcolor">
     <div class="container2">
         <div class="subContainer3">
             <h1>What is Soulwinning?</h1>
@@ -42,6 +45,7 @@
             <img src="MentoringIMGs/soulwinn.png" alt="">
         </div>
     </div>  
+</div>
 
     <div class="container1">
         <div class="subContainer1">
@@ -56,7 +60,32 @@
     <div class="subscribe">
         <h1>Interested?</h1>
         <p>Please kindly fill up the form if you are willing to be mentored</p>
-        <button>Form</button>
+        <button>Click Here</button>
+    </div>
+
+    <div class="announce1">
+        <div class="announcement">
+          <h1>What's New?</h1>
+          <p>Check us here for any new updates and news about Mentoring!</p>
+          <a href="Announcement.html">
+          <div class="btn">
+            <button>Check us out</button>
+          </div>
+            </a>
+        </div>
+        <div class="announceImg">
+          <img src="HomeImgs/goalsImg.jpg" alt="">
+        </div>
+    </div>
+
+    <div class="bgbackground">
+        <div class="bottomLinks">
+          <div class="demnSon">
+              <h1>JGLWHM</h1>
+              <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
+              <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
+              <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
+          </div>
     </div>
     
 </body>
