--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         
           
             <div class="sol zoom">
-              <a href="">
+              <a href="SOL.html">
                 <img src="EquippingIMGs/sol.png" alt="">
                 <p id="nice">SOL Class</p>
                 <p>Interested on becoming a leader? Learn more here</p>
