--- a/SOL.html
+++ b/SOL.html
@@ -26,12 +26,45 @@
         </div>
     </div>
     
-    <div class="container1">
-        <img src="SOLIMGs/backgroundIMG.jpg" alt="">
-    </div>
-
     <div class="containerText">
         <h1>What is School of Leaders?</h1>
+        <p>The School of Leaders at a church is typically a program or training that is designed to equip individuals with leadership skills and knowledge, particularly for service within the church community. The curriculum may cover a range of topics such as biblical principles of leadership, team building, conflict resolution, communication skills, and organizational management.</p>
+        <p>The School of Leaders may be structured as a series of classes or workshops, with assignments and assessments to evaluate progress. Participants may be required to complete a certain number of hours of service within the church or community to demonstrate their leadership skills.</p>
+        <h1>Our Goals</h1>
+        <p>The goal of the School of Leaders is to identify and develop leaders who can serve as role models and mentors to others within the church community. It is an opportunity for individuals to grow in their faith, develop their leadership potential, and learn how to effectively serve others.</p>
+    </div>
+
+<div class="bgcolor">
+    <div class="containerText2">
+        <h1>How to Join?</h1>
+        <p>The specific qualifications to join the School of Leaders at a church may vary depending on the church community and the requirements of the program. However, here are some general qualifications that a participant may need to meet</p>
+        <ol type="1">
+            <li>Active involvement in the church community: Participants should have a track record of regular attendance at church services and involvement in church activities.</li>
+            <li>Christian faith: Participants should have a personal relationship with Jesus Christ and a desire to grow in their faith.</li>
+            <li>Character: Participants should demonstrate a high level of integrity, honesty, humility, and a teachable spirit.</li>
+            <li>Commitment: Participants should be willing to commit the time and effort required to complete the program and serve in leadership roles within the church community.</li>
+            <li>Leadership potential: Participants should show evidence of leadership skills or the potential to develop such skills, such as good communication skills, a positive attitude, and the ability to work well with others.</li>
+            <li>Recommendation: Participants may need a recommendation from a church leader or mentor who can attest to their character, commitment, and leadership potential.</li>
+            <li>Age requirement: Some churches may have age requirements for participants, such as being at least 18 years old.</li>
+        </ol>
+        <p id="bottomText">It's important to note that these qualifications are not exhaustive.</p>
+    </div>
+</div>
+
+<div class="containerForm">
+    <p>If you are interested you can fill up this form so we can assisst you further in order to join SOL</p>
+    <button>Click here</button>
+</div>
+
+
+    <div class="bgbackground">
+        <div class="bottomLinks">
+          <div class="demnSon">
+              <h1>JGLWHM</h1>
+              <p>002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines</p>
+              <a href="https://www.facebook.com/greatlightworldharvest">facebook.com/greatlightworldharvest</a><br>
+              <a href="https://www.youtube.com/@jesusthegreatlightworldhar1413">youtube.com/@jesusthegreatlightworldhar1413</a>
+          </div>
     </div>
 
 </body>
