--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
          
           
             <div class="lifeclass zoom">
-              <a href="">
+              <a href="LifeClass.html">
                 <img src="EquippingIMGs/lifeclass.png" alt="">
                 <p id="nice">Life Class</p>
                 <p>Join us and learn how to live the life of a Christian</p>
