--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <img src="ConnectsIMGs/married4Layp.jpg" alt="">
           </div>
         </a>
-        <a href="">
+        <a href="Wildfire.html">
           <div class="wildfire">
             <img src="ConnectsIMGs/wildFire.jpg" alt="">
           </div>
