--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -10,6 +10,71 @@
 </head>
 <body>
 
+  <section id="home">
+    <nav class="navbar">
+      <div class="content">
+        <div class="logo">
+          <img src="HeadnFooter/logo.png" alt="">
+        </div>
+        <ul class="menu-list">
+          <div class="icon cancel-btn">
+            <img src="HeadnFooter/menu.png" alt="">
+          </div>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#connects">Connects</a></li>
+          <li><a href="#equipping">Equipping</a></li>
+          <li><a href="#media">Media</a></li>
+          <li><a href="PrayerRequest.html">Prayer Request</a></li>
+          <li><a href="Announcement.html">Announcements</a></li>
+        </ul>
+        <div class="icon menu-btn">
+          <img src="HeadnFooter/menu.png" alt="">
+        </div>
+      </div>
+    </nav>
+  </section>
+
+  <div class="banner">
+    <p id="noice">Connects</p>
+    <h1>Sunday School</h1>
+  </div>
+
+  <div class="container">
+    <h1>Welcome to our Sunday School!</h1>
+    <p>Our Sunday Worship Service or also known as Sunday School is a time for our church community to come together to celebrate God's love and grace. We gather each week to sing hymns and worship songs, pray together, hear a relevant and inspiring message from the Bible, and participate in communion.</p>
+  </div>
+
+  <div class="containerImg">
+    <h3>This year's theme</h3>
+    <img src="SundaySchooltings/pressingAhead.jpg" alt="">
+  </div>
+
+  <div class="sermons">
+
+    <div class="live">
+      <h1>Live Sermons</h1>
+      <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fgreatlightworldharvest%2Fvideos%2F746509673730823%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+    </div>
+
+    <div class="pastLive">
+      <h1>Past Sermons</h1>
+      <div class="scroll">
+        <img src="SundaySchooltings/Archive.jpg" alt="">
+        <img src="SundaySchooltings/Archive.jpg" alt="">
+        <img src="SundaySchooltings/Archive.jpg" alt="">
+        <img src="SundaySchooltings/Archive.jpg" alt="">
+        <img src="SundaySchooltings/Archive.jpg" alt="">
+        </div>
+    </div>
+
+  </div>
+
+  <div>
+    <div>
+      <h1></h1>
+    </div>
+  </div>
+
   
 
 
