--- a/Sundayservice.html
+++ b/Sundayservice.html
@@ -21,7 +21,7 @@
             <img src="HeadnFooter/menu.png" alt="">
           </div>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#connects">Connects</a></li>
+          <li><a href="#connects">Sermons</a></li>
           <li><a href="#equipping">Equipping</a></li>
           <li><a href="#media">Media</a></li>
           <li><a href="PrayerRequest.html">Prayer Request</a></li>
@@ -49,34 +49,78 @@
     <img src="SundaySchooltings/pressingAhead.jpg" alt="">
   </div>
 
+  <div class="desc">
+    <h1></h1>
+  </div>
+
+  <div class="words1">
+    <h1>Sermons</h1>
+  </div>
+
   <div class="sermons">
 
     <div class="live">
       <h1>Live Sermons</h1>
-      <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fgreatlightworldharvest%2Fvideos%2F746509673730823%2F&show_text=false&width=560&t=0" width="560" height="314" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
+      <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2Fgreatlightworldharvest%2Fvideos%2F746509673730823%2F&show_text=false&width=560&t=0" width="560" height="380" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" allowFullScreen="true"></iframe>
     </div>
 
     <div class="pastLive">
       <h1>Past Sermons</h1>
       <div class="scroll">
-        <img src="SundaySchooltings/Archive.jpg" alt="">
-        <img src="SundaySchooltings/Archive.jpg" alt="">
-        <img src="SundaySchooltings/Archive.jpg" alt="">
-        <img src="SundaySchooltings/Archive.jpg" alt="">
-        <img src="SundaySchooltings/Archive.jpg" alt="">
+
+        <div class="img1">
+          <div class="innerimg1">
+            <h2>Sunday School</h2>
+            <p>March 5,2023</p>
+          </div>
         </div>
+
+        <div class="img1">
+          <div class="innerimg1">
+            <h2>Sunday School</h2>
+            <p>February 26,2023</p>
+          </div>
+        </div>
+
+        <div class="img1">
+          <div class="innerimg1">
+            <h2>Sunday School</h2>
+            <p>February 19,2023</p>
+          </div>
+        </div>
+
+        <div class="img1">
+          <div class="innerimg1">
+            <h2>Sunday School</h2>
+            <p>February 12,20233</p>
+          </div>
+        </div>
+
+        <div class="img1">
+          <div class="innerimg1">
+            <h2>Sunday School</h2>
+            <p>February 5,2023</p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </div>
 
-  <div>
-    <div>
-      <h1></h1>
-    </div>
+  <div class="words1">
+    <h1>Past Sermons</h1>
   </div>
 
-  
-
+  <div class="bruh">
+    <div class="noice">Item 1</div>
+    <div class="noice">Item 2</div>
+    <div class="noice">Item 3</div>
+    <div class="noice">Item 4</div>
+    <div class="noice">Item 5</div>
+    <div class="noice">Item 6</div>
+    <div class="noice">Item 7</div>
+    <div class="noice">Item 8</div>
+  </div>
 
 
 </body>
